--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
             </div>
             <button class="download btn btn-outline-dark" onclick="downloadImg()">저장하기</button>
+            <p>버튼 구현 실패... 그냥 캡쳐해주세요 😥</p>
         </section>
     </div>
 
